--- a/_posts/life/2012-12-24-诗歌-草原-牧民.md
+++ b/_posts/life/2012-12-24-诗歌-草原-牧民.md
@@ -5,7 +5,7 @@ categories: life
 tags:  诗歌
 ---
 
-#####蓝色苍穹吞天际，
-#####绿野无边卷大地。
-#####骑马执鞭喝牛羊，
-#####一曲牧歌走四方。
+蓝色苍穹吞天际，  
+绿野无边卷大地。  
+骑马执鞭喝牛羊，  
+一曲牧歌走四方。  
