--- a/_posts/life/2015-10-5-健身经验.md
+++ b/_posts/life/2015-10-5-健身经验.md
@@ -7,7 +7,7 @@ tags:  减肥 有氧训练 无氧训练 力量练习 控制饮食 健身方法
  
 健身两年多了，杂七杂八的资料经验也看了不少，《囚徒健身》，硬派健身，各种健身操，马拉松等等。经过这般努力也取得了一些成果，体重从200左右降到了140，马甲线也有了。回头看看，踩了不少坑，攒了不少经验。在这里做个总结，以后持续更新。
 
-##心理过程
+###一、心理过程
 身边很多朋友看到我的外表变化，赞叹之余的第一个问题往往是有什么好方法推荐一个呗。一般我都微笑着说："少吃多运动"，然后我就顺利的收获了沮丧的表情。其实，更简单的就两个字 —— ** 坚持 **。这不是屁话吗？不是，下面详细说说健身的心理过程。
 
 <!--more-->
@@ -37,7 +37,7 @@ tags:  减肥 有氧训练 无氧训练 力量练习 控制饮食 健身方法
 
 好吧，我想表达的是当你 ** 独立! 独立! 独立! ** 杠过减肥的最初4个月，那么你就会发现健身的乐趣了，而且真的会上瘾呦。其实这也复合科学研究成果 —— 人对一件事情投入的越多，越容易产生感情，即沉默成本。关于独立再扯两句，个人觉得减肥药，私教敦促等外界帮助都是一些外在手段而已，不能持久，若要使用也没必要太在意，但一定不要形成依赖，否则那还不如不健身，花了钱还没了健康。
 
-##健身方法
+###二、健身方法
 健身无外乎控制饮食和加强锻炼。健身之初，我认为这两件事的目的都是为了减脂。后来发现这不过是附带的结果罢了。控制饮食的最终目标应该是**养成良好的饮食习惯**，加强锻炼的目的是**提高自己的身体机能，拥有健康的体魄**。
 
 是啊，瘦了当然健康了，这不又是废话吗？
@@ -64,7 +64,7 @@ tags:  减肥 有氧训练 无氧训练 力量练习 控制饮食 健身方法
 
 通过后来的学习，我开始明白，身体有一个基础代谢水平，锻炼促进代谢水平提高，但它不像锻炼那样立竿见影，需要休息恢复，一步一步提升，一味的锻炼只能导致代谢紊乱。
 
-##健身实施
+###三、健身实施
 跳过各个健身的坑后，真心觉得每个人的健身计划应该都是不同的，因为每个人的身体状态都是不同，而且同一个人的不同时期身体状态也不同。健身计划切勿模仿，**量力而行**最重要。下面总结了几点失败过的经验，请各位看官参考：
 
     1. 循序渐进，量力而行 ——— 强烈做一段时间《囚徒健身》的计划，每一个时期的计划都很周到。
